--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,12 @@
 	</parent>
 
 	<name>Explore With Me</name>
+    <modules>
+        <module>main-server</module>
+		<module>stats-service</module>
+	</modules>
 
-	<groupId>ru.practicum</groupId>
+    <groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -20,6 +24,11 @@
 	<properties>
 		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>3.3.2</spring.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<lombok.mapstruct>0.2.0</lombok.mapstruct>
+		<puppycrawlcheckstyle>10.3</puppycrawlcheckstyle>
+		<spring.web.version>5.2.2.RELEASE</spring.web.version>
 	</properties>
 
 	<build>
@@ -53,11 +62,73 @@
 						</execution>
 					</executions>
 					<dependencies>
+
 						<dependency>
 							<groupId>com.puppycrawl.tools</groupId>
 							<artifactId>checkstyle</artifactId>
-							<version>10.3</version>
+							<version>${puppycrawlcheckstyle}</version>
 						</dependency>
+
+						<dependency>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-starter-data-jpa</artifactId>
+							<version>${spring.version}</version>
+						</dependency>
+
+						<dependency>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-starter-web</artifactId>
+							<version>${spring.version}</version>
+						</dependency>
+
+						<dependency>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-actuator</artifactId>
+							<version>${spring.version}</version>
+						</dependency>
+
+						<dependency>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-starter-validation</artifactId>
+							<version>${spring.version}</version>
+						</dependency>
+
+						<dependency>
+							<groupId>org.postgresql</groupId>
+							<artifactId>postgresql</artifactId>
+							<scope>runtime</scope>
+						</dependency>
+
+						<dependency>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<optional>true</optional>
+						</dependency>
+
+						<dependency>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-starter-test</artifactId>
+							<scope>test</scope>
+						</dependency>
+
+						<dependency>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct</artifactId>
+							<version>${mapstruct.version}</version>
+						</dependency>
+
+						<dependency>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>${lombok.mapstruct}</version>
+						</dependency>
+
+						<dependency>
+							<groupId>org.springframework</groupId>
+							<artifactId>spring-web</artifactId>
+							<version>${spring.web.version}</version>
+						</dependency>
+
 					</dependencies>
 				</plugin>
 				<plugin>
