--- a/stats/stats-dto/pom.xml
+++ b/stats/stats-dto/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.practicum</groupId>
-        <artifactId>explore-with-me</artifactId>
+        <artifactId>stats</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>stats-service</artifactId>
+    <artifactId>stats-dto</artifactId>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
