--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,10 @@
 	<name>Explore With Me</name>
     <modules>
         <module>main-server</module>
-		<module>stats</module>
-		<module>stats/stats-dto</module>
-		<module>stats/stats-server</module>
-		<module>stats/stats-client</module>
+		<module>stat</module>
+		<module>stat/stat-dto</module>
+		<module>stat/stat-server</module>
+		<module>stat/stat-client</module>
 	</modules>
 
     <groupId>ru.practicum</groupId>
