--- a/stat/pom.xml
+++ b/stat/pom.xml
@@ -5,11 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.practicum</groupId>
-        <artifactId>stats</artifactId>
+        <artifactId>explore-with-me</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>stats-dto</artifactId>
+    <artifactId>stat</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>stat-client</module>
+        <module>stat-dto</module>
+        <module>stat-server</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
