--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   stat-server:
-    build: stat-server
+    build: stat/stat-server
     image: stat-server
     container_name: stat-server
     ports:
@@ -27,30 +27,30 @@ services:
       interval: 5s
       retries: 10
 
-  ewm-service:
-    build: main-server
-    image: main-server
-    container_name: main-server
-    ports:
-      - "8080:8080"
-    depends_on:
-      - ewm-db
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/main
-      - SPRING_DATASOURCE_USERNAME=main
-      - SPRING_DATASOURCE_PASSWORD=main
+#  ewm-service:
+#   build: main-server
+#    image: main-server
+#    container_name: main-server
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - ewm-db
+#    environment:
+#      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/main
+#      - SPRING_DATASOURCE_USERNAME=main
+#      - SPRING_DATASOURCE_PASSWORD=main
 
-  ewm-db:
-    image: postgres:16.1
-    container_name: main-postgres
-    ports:
-      - "6542:5432"
-    environment:
-      - POSTGRES_PASSWORD=main
-      - POSTGRES_USER=main
-      - POSTGRES_DB=main
-    healthcheck:
-      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
-      timeout: 5s
-      interval: 5s
-      retries: 10
+#  ewm-db:
+#    image: postgres:16.1
+#    container_name: main-postgres
+#    ports:
+#      - "6542:5432"
+#    environment:
+#      - POSTGRES_PASSWORD=main
+#      - POSTGRES_USER=main
+#      - POSTGRES_DB=main
+#    healthcheck:
+#      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+#      timeout: 5s
+#      interval: 5s
+#      retries: 10
