--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.0</version>
-		<relativePath/>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<name>Explore With Me</name>
-    <modules>
-        <module>main-server</module>
+	<modules>
+		<module>main-server</module>
 		<module>stat</module>
 	</modules>
 
-    <groupId>ru.practicum</groupId>
+	<groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -24,11 +24,6 @@
 	<properties>
 		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>3.3.2</spring.version>
-		<mapstruct.version>1.5.5.Final</mapstruct.version>
-		<lombok.mapstruct>0.2.0</lombok.mapstruct>
-		<puppycrawlcheckstyle>10.3</puppycrawlcheckstyle>
-		<spring.web.version>5.2.2.RELEASE</spring.web.version>
 	</properties>
 
 	<build>
@@ -62,74 +57,11 @@
 						</execution>
 					</executions>
 					<dependencies>
-
 						<dependency>
 							<groupId>com.puppycrawl.tools</groupId>
 							<artifactId>checkstyle</artifactId>
-							<version>${puppycrawlcheckstyle}</version>
+							<version>10.3</version>
 						</dependency>
-
-						<dependency>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-starter-data-jpa</artifactId>
-							<version>${spring.version}</version>
-						</dependency>
-
-						<dependency>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-starter-web</artifactId>
-							<version>${spring.version}</version>
-						</dependency>
-
-						<dependency>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-actuator</artifactId>
-							<version>${spring.version}</version>
-						</dependency>
-
-						<dependency>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-starter-validation</artifactId>
-							<version>${spring.version}</version>
-						</dependency>
-
-						<dependency>
-							<groupId>org.postgresql</groupId>
-							<artifactId>postgresql</artifactId>
-							<scope>runtime</scope>
-						</dependency>
-
-						<dependency>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-							<optional>true</optional>
-						</dependency>
-
-						<dependency>
-							<groupId>org.springframework.boot</groupId>
-							<artifactId>spring-boot-starter-test</artifactId>
-							<scope>test</scope>
-						</dependency>
-
-						<dependency>
-							<groupId>org.mapstruct</groupId>
-							<artifactId>mapstruct</artifactId>
-							<version>${mapstruct.version}</version>
-						</dependency>
-
-						<dependency>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok-mapstruct-binding</artifactId>
-							<version>${lombok.mapstruct}</version>
-							<scope>provided</scope>
-						</dependency>
-
-						<dependency>
-							<groupId>org.springframework</groupId>
-							<artifactId>spring-web</artifactId>
-							<version>${spring.web.version}</version>
-						</dependency>
-
 					</dependencies>
 				</plugin>
 				<plugin>
