--- a/stat/pom.xml
+++ b/stat/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>stat</artifactId>
     <packaging>pom</packaging>
+
     <modules>
         <module>stat-client</module>
         <module>stat-dto</module>
@@ -21,6 +22,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
