--- a/stat/stat-server/src/main/resources/application.properties
+++ b/stat/stat-server/src/main/resources/application.properties
@@ -1,16 +1,8 @@
 server.port=9090
-
-spring.config.activate.on-profile=test
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/stat
+spring.datasource.url=jdbc:postgresql://localhost:5432/stat-db
 spring.datasource.username=stat
 spring.datasource.password=stat
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=shareit
-spring.datasource.password=shareit
+spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
