Внесены правки по ревью

--- a/stat/stat-dto/pom.xml
+++ b/stat/stat-dto/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>stat-dto</artifactId>
 
+    <properties>
+        <jackson.version>2.15.4</jackson.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -19,12 +23,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.15.4</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
-
 </project>
