--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 server.port=8080
+
+spring.config.activate.on-profile=test
 spring.datasource.url=jdbc:postgresql://localhost:5432/main-db
 spring.datasource.username=main
 spring.datasource.password=main
 spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:main-db
+spring.datasource.username=main
+spring.datasource.password=main
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
