--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - stat-db
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://stat-db:5432/stat
-      - SPRING_DATASOURCE_USERNAME=stat
-      - SPRING_DATASOURCE_PASSWORD=stat
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=admin
 
   stat-db:
     image: postgres:16.1
@@ -18,8 +18,8 @@ services:
     ports:
       - "6541:5432"
     environment:
-      - POSTGRES_PASSWORD=stat
-      - POSTGRES_USER=stat
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=postgres
       - POSTGRES_DB=stat
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
