--- a/stat/stat-server/src/main/resources/application.properties
+++ b/stat/stat-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=9090
+server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/stat-db
-spring.datasource.username=stat
-spring.datasource.password=stat
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
