--- a/main-server/pom.xml
+++ b/main-server/pom.xml
@@ -95,14 +95,16 @@
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-jpa</artifactId>
-            <version>4.4.0</version>
+            <version>5.1.0</version>
+            <classifier>jakarta</classifier>
         </dependency>
 
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
-            <version>4.4.0</version>
+            <version>5.1.0</version>
             <scope>provided</scope>
+            <classifier>jakarta</classifier>
         </dependency>
 
         <dependency>
@@ -148,8 +150,8 @@
                             <artifactId>mapstruct-processor</artifactId>
                             <version>${mapstruct.version}</version>
                         </path>
+
                     </annotationProcessorPaths>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -158,6 +160,10 @@
                 <version>1.1.3</version>
                 <executions>
                     <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
                         <configuration>
                             <outputDirectory>target/generated-sources/java</outputDirectory>
                             <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
@@ -167,5 +173,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
