--- a/stat/stat-server/src/main/resources/application.properties
+++ b/stat/stat-server/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 server.port=9090
 
-spring.config.activate.on-profile=test
+#spring.config.activate.on-profile=test
 spring.datasource.url=jdbc:postgresql://localhost:5432/stat-db
 spring.datasource.username=stat
 spring.datasource.password=stat
 spring.datasource.driverClassName=org.postgresql.Driver
 
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:stat-db
-spring.datasource.username=stat
-spring.datasource.password=stat
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:stat-db
+#spring.datasource.username=stat
+#spring.datasource.password=stat
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
