--- a/main-server/src/main/resources/application.properties
+++ b/main-server/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.sql.init.mode=always
+
+# Stats service configuration
+stats.service.enabled=true
+stats.service.host=stat-server
+stats.service.port=9090
+stats.service.scheme=http
